Setup Linux VM + Spark local environment

--- a/P8_Notebook_Linux_EMR_PySpark_V1.0.ipynb
+++ b/P8_Notebook_Linux_EMR_PySpark_V1.0.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ca146e79-1b8c-4448-b14e-eed8d632f665",
+   "metadata": {},
+   "source": [
+    "**Déployez un modèle dans le cloud**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "441159cc",
    "metadata": {},
    "source": [
-    "# Déployez un modèle dans le cloud\n",
-    "\n",
-    "\n",
-    "# Sommaire :\n",
+    "**Sommaire** :\n",
     "\n",
     "**1. Préambule**<br />\n",
     "&emsp;1.1 Problématique<br />\n",
@@ -75,12 +80,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec2cee08",
+   "id": "c0e72130",
    "metadata": {},
    "source": [
-    "# 1. Préambule\n",
-    "\n",
-    "## 1.1 Problématique\n",
+    "# 1. Préambule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd822e32",
+   "metadata": {},
+   "source": [
+    "# 1.1. Problématique\n",
     "\n",
     "La très jeune start-up de l'AgriTech, nommée \"**Fruits**!\", <br />\n",
     "cherche à proposer des solutions innovantes pour la récolte des fruits.\n",
@@ -98,9 +109,15 @@
     "de classification des images de fruits.\n",
     "\n",
     "De plus, le développement de l’application mobile permettra de construire <br />\n",
-    "une première version de l'architecture **Big Data** nécessaire.\n",
-    "\n",
-    "## 1.2 Objectifs dans ce projet\n",
+    "une première version de l'architecture **Big Data** nécessaire."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec2cee08",
+   "metadata": {},
+   "source": [
+    "## 1.2. Objectifs dans ce projet\n",
     "\n",
     "1. Développer une première chaîne de traitement des données qui <br />\n",
     "   comprendra le **preprocessing** et une étape de **réduction de dimension**.\n",
@@ -115,7 +132,7 @@
    "id": "6b95e6ce",
    "metadata": {},
    "source": [
-    "## 1.3 Déroulement des étapes du projet\n",
+    "## 1.3. Déroulement des étapes du projet\n",
     "\n",
     "Le projet va être réalisé en 2 temps, dans deux environnements différents. <br />\n",
     "Nous allons dans un premier temps développer et exécuter notre code en local, <br />\n",
@@ -254,24 +271,59 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e89a2da",
+   "id": "d52d55a4",
    "metadata": {},
    "source": [
-    "# 3. Déploiement de la solution en local\n",
-    "\n",
-    "\n",
-    "## 3.1 Environnement de travail\n",
-    "\n",
+    "# 3. Déploiement de la solution en local"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17ccc1ee",
+   "metadata": {},
+   "source": [
+    "## 3.1 Environnement de travail"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f1ae38f",
+   "metadata": {},
+   "source": [
     "Pour des raisons de simplicité, nous développons dans un environnement <br />\n",
     "Linux Unbuntu (exécuté depuis une machine Windows dans une machine virtuelle)\n",
-    "* Pour installer une machine virtuelle :  https://www.malekal.com/meilleurs-logiciels-de-machine-virtuelle-gratuits-ou-payants/\n",
-    "\n",
-    "## 3.2 Installation de Spark\n",
-    "\n",
-    "[La première étape consiste à installer Spark ](https://computingforgeeks.com/how-to-install-apache-spark-on-ubuntu-debian/)\n",
-    "\n",
-    "## 3.3 Installation des packages\n",
-    "\n",
+    "* Pour installer une machine virtuelle :  https://www.malekal.com/meilleurs-logiciels-de-machine-virtuelle-gratuits-ou-payants/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91d7659e",
+   "metadata": {},
+   "source": [
+    "## 3.2 Installation de Spark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da0c33f4",
+   "metadata": {},
+   "source": [
+    "[La première étape consiste à installer Spark ](https://computingforgeeks.com/how-to-install-apache-spark-on-ubuntu-debian/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4a1fa13",
+   "metadata": {},
+   "source": [
+    "## 3.3 Installation des packages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a7ac2a",
+   "metadata": {},
+   "source": [
     "<u>On installe ensuite à l'aide de la commande **pip** <br />\n",
     "les packages qui nous seront nécessaires</u> :"
    ]
@@ -2260,9 +2312,9 @@
      "output_type": "stream",
      "text": [
       "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/mobilenet_v2/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_224.h5\n",
-      "\r\n",
-      "    8192/14536120 [..............................] - ETA: 0s\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\n",
-      " 4202496/14536120 [=======>......................] - ETA: 0s\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r\n",
+      "\n",
+      "\n",
+      "\n",
       "14540800/14536120 [==============================] - 0s 0us/step"
      ]
     }
@@ -3275,7 +3327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.3"
   },
   "toc": {
    "base_numbering": 1,
